fix(ui): td-cellにvertical-align topを指定
* inner-tbodyのheight100%でテキストが押し下げられるのを防ぐ為

--- a/src/resources/sass/components/_table.scss
+++ b/src/resources/sass/components/_table.scss
@@ -56,6 +56,7 @@ Table styles
   border-right: 1px solid var(--color-table-border);
   padding: 8px 16px;
   overflow-wrap: break-word;
+  vertical-align: top; // inner-tbodyのheight100%でテキストが押し下げられるのを防ぐ為
 }
 
 .th-cell {
